Initiell commit av kode for tilgangskontroll
